Checkpoint.