@@ -9,22 +9,8 @@ import java.nio.file.Files
 
 plugins {
   id 'java'
-
-  id 'com.gradleup.shadow' version '8.3.7'
-  id 'net.ltgt.errorprone' version '4.3.0'
-
-  // To show task list as a tree, run: ./gradlew <taskname> taskTree
-  id 'com.dorongold.task-tree' version '4.0.1'
-
-  // Code formatting; defines targets "spotlessApply" and "spotlessCheck".
-  // Requires Java 11.
-  id "com.diffplug.spotless" version "6.25.0"
 }
 apply plugin: 'java'
-apply plugin: 'com.gradleup.shadow'
-
-group = 'org.checkerframework'
-version = '3.49.5'
 
 java {
   // This test is for whether the Checker Framework supports (runs under) Java 8.
@@ -36,24 +22,6 @@ java {
     sourceCompatibility = 11
     targetCompatibility = 11
   }
-}
-
-repositories {
-  mavenCentral()
-}
-
-ext {
-  isJava17orHigher = JavaVersion.current() >= JavaVersion.VERSION_17
-}
-
-ext {
-  // The local git repository, typically in the .git directory, but not for worktrees.
-  // This value is always overwritten, but Gradle needs the variable to be initialized.
-  localRepo = ".git"
-}
-
-configurations {
-  javacJar
 }
 
 dependencies {
@@ -68,91 +36,8 @@ dependencies {
     exclude group: 'org.checkerframework'
   }
   implementation 'org.ow2.asm:asm:9.8'
-  ext.errorproneVersion = '2.39.0'
-  implementation "com.google.errorprone:error_prone_annotations:${errorproneVersion}"
-  errorprone("com.google.errorprone:error_prone_core:${errorproneVersion}")
-
   testImplementation group: 'junit', name: 'junit', version: '4.13.2'
   testImplementation 'org.checkerframework:checker-qual:3.49.5'
-}
-
-compileJava {
-  if (true /* supports Java 8 */) {
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
-  } else {
-    sourceCompatibility = 11
-    targetCompatibility = 11
-    options.compilerArgs += [
-      '--add-exports',
-      'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
-      '--add-exports',
-      'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-      '--add-exports',
-      'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
-      '--add-exports',
-      'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
-      '--add-exports',
-      'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
-      '--add-exports',
-      'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
-      '--add-exports',
-      'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
-      '--add-exports',
-      'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-      '--add-exports',
-      'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-    ]
-  }
-  options.failOnError = true
-  options.deprecation = true
-  if (JavaVersion.current().compareTo(org.gradle.api.JavaVersion.VERSION_20) >= 0) {
-    // JDK 20 and later deprecate --target 8
-    options.compilerArgs += [
-      '-g',
-      '-Werror',
-      '-Xlint:all,-options',
-    ]
-  } else {
-    options.compilerArgs += [
-      '-g',
-      '-Werror',
-      '-Xlint',
-    ]
-  }
-  options.encoding = 'UTF-8'
-
-  options.errorprone.enabled = isJava17orHigher
-  options.errorprone.disable(
-      // Suggestion assumes there is no overriding equals() method.
-      "NonOverridingEquals",
-      // Suggestion is incorrect when using the Checker Framework.
-      "ExtendsObject",
-      // Suggests using a class that's in Error Prone itself, not in any library for clients.
-      // It requires "import com.google.errorprone.util.ASTHelpers;", and (in build.gradle)
-      //   implementation "com.google.errorprone:error_prone_core:${errorproneVersion}"
-      // Adding that line in build.gradle causes a javac crash when running the Checker Framework.
-      "ASTHelpersSuggestions",
-      // Suggestion uses a Guava-only annotation.
-      "AnnotateFormatMethod",
-      // Text blocks were introduced in Java 15.
-      "StringConcatToTextBlock",
-      )
-}
-
-compileTestJava {
-  options.errorprone.enabled = isJava17orHigher
-  options.errorprone.disable(
-      // Suggestion assumes there is no overriding equals() method.
-      "NonOverridingEquals",
-      // Suggestion is incorrect when using the Checker Framework.
-      "ExtendsObject",
-      // Suggests using a class that's in Error Prone itself, not in any library for clients.
-      // It requires "import com.google.errorprone.util.ASTHelpers;", and (in build.gradle)
-      //   implementation "com.google.errorprone:error_prone_core:${errorproneVersion}"
-      // Adding that line in build.gradle causes a javac crash when running the Checker Framework.
-      "ASTHelpersSuggestions",
-      )
 }
 
 
@@ -182,35 +67,6 @@ shadowJar {
 // Shadowing Test Sources and Dependencies
 import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
-task allButJavacJar(type: ShadowJar, dependsOn: compileJava) {
-  description = 'Builds annotation-file-utilities-all-but-javac.jar with all dependencies except javac.jar.'
-  destinationDirectory = projectDir
-  includeEmptyDirs = false
-  archiveFileName = 'annotation-file-utilities-all-but-javac.jar'
-
-  from shadowJar.source
-  configurations  = shadowJar.configurations
-
-  dependencies {
-    exclude(dependency('com.google.errorprone:javac:.*'))
-  }
-  // Don't include any class from the Checker Framework.
-  // This should just be checker-qual.
-  exclude 'org/checkerframework/**'
-  exclude 'javax/**'
-  doFirst {
-    // TODO: The release fails because of this, so skip it for now.
-    if (project.hasProperty('release') && false) {
-      println 'Relocating packages.'
-      relocate 'org.apache', 'org.checkerframework.org.apache'
-      relocate 'org.relaxng', 'org.checkerframework.org.relaxng'
-      relocate 'org.plumelib', 'org.checkerframework.org.plumelib'
-      relocate 'org.objectweb.asm', 'org.checkerframework.org.objectweb.asm'
-      relocate 'com.google', 'org.checkerframework.com.google'
-    }
-  }
-}
-
 task skinnyJar(type: ShadowJar, dependsOn: compileJava) {
   description = 'Builds annotation-file-utilities.jar with only scene-lib and annotation-file-utilities classes.'
   includeEmptyDirs = false
@@ -220,31 +76,6 @@ task skinnyJar(type: ShadowJar, dependsOn: compileJava) {
   include 'org/checkerframework/afu/annotator/**/*.class'
 }
 
-test {
-  testLogging {
-    showStandardStreams = true
-    // Always run the tests
-    outputs.upToDateWhen { false }
-
-    // Show the found unexpected diagnostics and expected diagnostics not found.
-    exceptionFormat = "full"
-    events "failed"
-  }
-
-  // After each test, print a summary.
-  afterSuite { desc, result ->
-    if (desc.getClassName() != null) {
-      long mils = result.getEndTime() - result.getStartTime()
-      double seconds = mils / 1000.0
-
-      println "Testsuite: ${desc.getClassName()}\n" +
-          "Tests run: ${result.testCount}, " +
-          "Failures: ${result.failedTestCount}, " +
-          "Skipped: ${result.skippedTestCount}, " +
-          "Time elapsed: ${seconds} sec\n"
-    }
-  }
-}
 task testExample(type: JavaExec, dependsOn: compileTestJava, group: 'Verification') {
   description = 'Run the scene-lib example test.'
   String resourceDir = "${projectDir}/src/test/resources/annotations/tests/executable/"
@@ -381,110 +212,19 @@ task cleanManual(type: Exec) {
   ]
 }
 
-task cleanAnnotationFileFormat {
-  description = "Removes generated documentation files."
-  dependsOn(cleanManual)
-  doLast {
-    delete "annotation-file-format.aux"
-    delete "annotation-file-format.dvi"
-    delete "annotation-file-format.haux"
-    delete "annotation-file-format.html"
-    delete "annotation-file-format.htoc"
-    delete "annotation-file-format.log"
-    delete "annotation-file-format.pdf"
-    delete "annotation-file-format.toc"
-    delete "scene-lib-type-hierarchy.png"
-  }
+clean {
+  dependsOn(cleanTestAnnotator, cleanManual)
+  delete('annotation-file-utilities.jar','annotation-file-utilities-all.jar', 'annotation-tools.zip')
+  delete "annotation-file-format.aux"
+  delete "annotation-file-format.dvi"
+  delete "annotation-file-format.haux"
+  delete "annotation-file-format.html"
+  delete "annotation-file-format.htoc"
+  delete "annotation-file-format.log"
+  delete "annotation-file-format.pdf"
+  delete "annotation-file-format.toc"
+  delete "scene-lib-type-hierarchy.png"
 }
-
-/**
- * Creates a task that runs the checker on the main source set. The task is named
- * "check${shortName}", for example "checkPurity" or "checkNullness".
- * @param checker fully-qualified name of the checker to run
- * @param shortName short name of the checker, to use to name the task.
- */
-def createCheckTypeTask(checker, shortName) {
-  tasks.create(name: "check${shortName}", type: JavaCompile) {
-    description = "Run the ${shortName} Checker on the main sources."
-    group = 'Verification'
-    String checkerDist;
-    if (System.getenv('CHECKERFRAMEWORK') == null) {
-      checkerDist = "${projectDir}/../../checker-framework/checker/dist"
-    } else {
-      checkerDist = "${System.getenv('CHECKERFRAMEWORK')}/checker/dist"
-    }
-    // Always run the task.
-    outputs.upToDateWhen { false }
-    source = sourceSets.main.java
-    classpath = files("${checkerDist}/checker-qual.jar")
-    classpath += sourceSets.main.compileClasspath
-    destinationDirectory = file("${buildDir}/typecheck/${shortName}")
-
-    options.annotationProcessorPath = files("${checkerDist}/checker.jar")
-    options.compilerArgs += [
-      '-processor',
-      "${checker}",
-      '-proc:only',
-      '-Xlint:-processing',
-      '-AwarnUnneededSuppressions',
-      '-AwarnRedundantAnnotations',
-    ]
-    options.fork = true
-
-    options.forkOptions.jvmArgs += [
-      "--add-exports",
-      "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-      "--add-exports",
-      "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-      "--add-exports",
-      "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-      "--add-exports",
-      "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-      "--add-exports",
-      "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-      "--add-exports",
-      "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-      "--add-exports",
-      "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-      "--add-exports",
-      "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-      "--add-opens",
-      "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-    ]
-
-    if (true /* supports Java 8 */) {
-      sourceCompatibility = 1.8
-      targetCompatibility = 1.8
-    } else {
-      sourceCompatibility = 11
-      targetCompatibility = 11
-      options.compilerArgs += [
-        '--add-exports',
-        'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
-        '--add-exports',
-        'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-        '--add-exports',
-        'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
-        '--add-exports',
-        'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
-        '--add-exports',
-        'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
-        '--add-exports',
-        'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
-        '--add-exports',
-        'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
-        '--add-exports',
-        'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-        '--add-exports',
-        'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-      ]
-    }
-  }
-}
-
-// Create tasks checkSignature and checkResourceLeak.
-createCheckTypeTask('org.checkerframework.checker.signature.SignatureChecker', 'Signature')
-createCheckTypeTask('org.checkerframework.checker.resourceleak.ResourceLeakChecker', 'ResourceLeak')
 
 task htmlValidate(type: Exec) {
   description = 'Validate that HTML files are well-formed.'
@@ -505,64 +245,6 @@ task htmlValidate(type: Exec) {
 
 test.dependsOn testExample
 test.dependsOn testAnnotator
-
-javadoc {
-  options.memberLevel = JavadocMemberLevel.PUBLIC
-  if (true /* supports Java 8 */) {
-    options.addStringOption('source', '8')
-  } else {
-    options.addStringOption('source', '11')
-  }
-
-  options.addStringOption('Xdoclint:all', '-quiet')
-  options.addStringOption('Xmaxwarns', '10000')
-  options.JFlags = [
-    "--add-exports",
-    "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-    "--add-exports",
-    "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-    "--add-exports",
-    "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-    "--add-exports",
-    "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-    "--add-exports",
-    "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
-  ]
-}
-
-task javadocPrivate(type: Javadoc) {
-  description = 'Run Javadoc in strict mode.'
-  source = sourceSets.main.allJava
-  classpath = sourceSets.main.compileClasspath + sourceSets.main.runtimeClasspath
-  options.addStringOption('-Xdoclint:all', '-quiet')
-  options.memberLevel = JavadocMemberLevel.PRIVATE
-  options.addStringOption('Xmaxwarns', '10000')
-}
-
-configurations {
-  requireJavadoc
-}
-dependencies {
-  requireJavadoc "org.plumelib:require-javadoc:2.0.0"
-}
-task requireJavadoc(type: JavaExec) {
-  description = 'Ensures that Javadoc documentation exists.'
-  mainClass = "org.plumelib.javadoc.RequireJavadoc"
-  classpath = configurations.requireJavadoc
-  args "annotation-file-utilities/src"
-  workingDir = "${projectDir}/.."
-  jvmArgs += [
-    '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
-    '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
-    '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-    '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-    '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
-    '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
-    '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-    '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-  ]
-}
-// check.dependsOn requireJavadoc
 
 task updateUserOptions(dependsOn: [
   'updateUserOptionsJavadoc',
@@ -608,13 +290,8 @@ task updateUserOptionsHtml(type: Javadoc, dependsOn: 'assemble') {
 artifacts {
   archives shadowJar
   archives skinnyJar
-  archives allButJavacJar
 }
 
-clean {
-  dependsOn(cleanTestAnnotator, cleanAnnotationFileFormat, cleanTestExample)
-  delete('annotation-file-utilities.jar','annotation-file-utilities-all.jar', 'annotation-tools.zip')
-}
 
 ext.tmpAnnotationTools = "${layout.buildDirectory.get()}/tmp-annotation-tools"
 task cloneAndPrepDirectoryForZipfile(type: Exec) {
@@ -725,71 +402,4 @@ task releaseBuildWithoutTest(type: GradleBuild) {
     'zipfile',
     'copyToDeployDir'
   ]
-}
-
-
-task pythonIsInstalled(type: Exec) {
-  description = "Check that the python3 executable is installed."
-  executable = "python3"
-  args "--version"
-}
-
-
-task setLocalRepo(type:Exec) {
-  commandLine 'git', 'worktree', 'list'
-  standardOutput = new ByteArrayOutputStream()
-  doLast {
-    String worktreeList = standardOutput.toString()
-    localRepo = worktreeList.substring(0, worktreeList.indexOf(" ")) + "/.git"
-  }
-}
-
-task installGitHooks(type: Copy, dependsOn: 'setLocalRepo') {
-  description = 'Copies git hooks to .git directory'
-  from files("../.git.pre-commit")
-  rename('.git\\.(.*)', '$1')
-  into "${localRepo}/hooks"
-  doFirst{
-    // setLocalRepo changed the value of `localRepo`, so reset into.
-    into "${localRepo}/hooks"
-  }
-}
-compileJava.dependsOn installGitHooks
-
-
-// Code formatting
-
-spotless {
-
-  def doNotFormat = [
-    // TODO: adjust this
-    'dataflow/manual/examples/',
-    '**/nullness-javac-errors/*',
-    '**/calledmethods-delomboked/*',
-    '**/returnsreceiverdelomboked/*',
-    '**/build/**',
-    '*/dist/**',
-  ]
-
-  format 'misc', {
-    // define the files to apply `misc` to
-    target '*.md', '*.tex', '.gitignore', 'Makefile'
-    targetExclude doNotFormat
-
-    // define the steps to apply to those files
-    trimTrailingWhitespace()
-    indentWithSpaces(2) // in Spotless version 7, change to: leadingTabsToSpaces(2)
-    endWithNewline()
-  }
-  java {
-    googleJavaFormat()
-    formatAnnotations()
-  }
-  groovyGradle {
-    target '**/*.gradle'
-    greclipse()  // which formatter Spotless should use to format .gradle files.
-    indentWithSpaces(2) // in Spotless version 7, change to: leadingTabsToSpaces(2)
-    trimTrailingWhitespace()
-    // endWithNewline() // Don't want to end empty files with a newline
-  }
 }
